# workspace-manager

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
docs/: TEST_PLAN_SESSIONS.md
docs/CODEMAPS/: INDEX.md  app.md  logwatch.md  notify.md  ui.md  workspace.md  zellij-tab-sync.md  zellij.md
docs/plans/: 2026-03-06-pane-monitoring-design.md  2026-03-06-pane-monitoring-plan.md  2026-03-10-yazi-integration-design.md  2026-03-10-yazi-integration-plan.md
layouts/: dev.kdl.template  simple.kdl.template  with-shell.kdl.template
scripts/: migrate-worktrees.sh
src/: lib.rs  main.rs
src/app/: config.rs  events.rs  mod.rs  state.rs
src/logwatch/: analyzer.rs  claude_sessions.rs  collector.rs  kiro_sqlite.rs  mod.rs  schema.rs
src/multiplexer/: mod.rs  tmux.rs  zellij.rs
src/notify/: client.rs  mod.rs  protocol.rs  server.rs
src/ui/: detail_view.rs  git_log.rs  help_view.rs  input_dialog.rs  mod.rs  selection_dialog.rs  status_bar.rs  workspace_list.rs
src/workspace/: manager.rs  mod.rs  pane.rs  session.rs  state.rs  worktree.rs
src/zellij/: actions.rs  mod.rs
zellij-tab-sync/: Cargo.toml
zellij-tab-sync/src/: main.rs
