[workspace]
members = [".", "zellij-tab-sync"]

[package]
name = "workspace-manager"
version = "0.1.0"
edition = "2021"
description = "TUI application for managing multiple Claude Code/Kiro-CLI workspaces"
license = "MIT"
authors = ["stanah"]

[dependencies]
tokio = { version = "1.36", features = ["full", "signal"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
git2 = "0.19"
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
toml = "0.8"
notify = "7.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 2で追加
# rmcp = { version = "0.2", features = ["server", "macros", "transport-io"] }
# rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "workspace-manager"
path = "src/main.rs"
